--- a/app/globals.css
+++ b/app/globals.css
@@ -6,8 +6,8 @@
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: Source Code Pro, monospace;
-  --font-mono: Source Code Pro, monospace;
+  --font-sans: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+  --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
   --color-sidebar-ring: var(--sidebar-ring);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
@@ -41,8 +41,8 @@
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
   --radius-xl: calc(var(--radius) + 4px);
-  --font-serif: Source Code Pro, monospace;
-  --radius: 0.125rem;
+  --font-serif: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
+  --radius: 0.5rem;
   --tracking-tighter: calc(var(--tracking-normal) - 0.05em);
   --tracking-tight: calc(var(--tracking-normal) - 0.025em);
   --tracking-wide: calc(var(--tracking-normal) + 0.025em);
@@ -69,114 +69,114 @@
 }
 
 :root {
-  --radius: 0.125rem;
-  --background: oklch(0.95 0.01 197.01);
-  --foreground: oklch(0.38 0.06 212.66);
-  --card: oklch(0.97 0.01 197.07);
-  --card-foreground: oklch(0.38 0.06 212.66);
-  --popover: oklch(0.97 0.01 197.07);
-  --popover-foreground: oklch(0.38 0.06 212.66);
-  --primary: oklch(0.56 0.09 203.28);
+  --radius: 0.5rem;
+  --background: oklch(0.98 0 0);
+  --foreground: oklch(0.24 0 0);
+  --card: oklch(0.99 0 0);
+  --card-foreground: oklch(0.24 0 0);
+  --popover: oklch(0.99 0 0);
+  --popover-foreground: oklch(0.24 0 0);
+  --primary: oklch(0.43 0.04 41.99);
   --primary-foreground: oklch(1.00 0 0);
-  --secondary: oklch(0.92 0.02 196.84);
-  --secondary-foreground: oklch(0.38 0.06 212.66);
-  --muted: oklch(0.93 0.01 196.97);
-  --muted-foreground: oklch(0.54 0.06 201.57);
-  --accent: oklch(0.90 0.03 201.89);
-  --accent-foreground: oklch(0.38 0.06 212.66);
-  --destructive: oklch(0.57 0.19 25.54);
-  --border: oklch(0.89 0.02 204.41);
-  --input: oklch(0.92 0.02 196.84);
-  --ring: oklch(0.56 0.09 203.28);
-  --chart-1: oklch(0.56 0.09 203.28);
-  --chart-2: oklch(0.64 0.10 201.59);
-  --chart-3: oklch(0.71 0.11 201.25);
-  --chart-4: oklch(0.77 0.10 201.18);
-  --chart-5: oklch(0.83 0.08 200.97);
-  --sidebar: oklch(0.93 0.02 205.32);
-  --sidebar-foreground: oklch(0.38 0.06 212.66);
-  --sidebar-primary: oklch(0.56 0.09 203.28);
-  --sidebar-primary-foreground: oklch(1.00 0 0);
-  --sidebar-accent: oklch(0.90 0.03 201.89);
-  --sidebar-accent-foreground: oklch(0.38 0.06 212.66);
-  --sidebar-border: oklch(0.89 0.02 204.41);
-  --sidebar-ring: oklch(0.56 0.09 203.28);
+  --secondary: oklch(0.92 0.07 74.37);
+  --secondary-foreground: oklch(0.35 0.07 40.83);
+  --muted: oklch(0.95 0 0);
+  --muted-foreground: oklch(0.50 0 0);
+  --accent: oklch(0.93 0 0);
+  --accent-foreground: oklch(0.24 0 0);
+  --destructive: oklch(0.63 0.19 33.34);
+  --border: oklch(0.88 0 0);
+  --input: oklch(0.88 0 0);
+  --ring: oklch(0.43 0.04 41.99);
+  --chart-1: oklch(0.43 0.04 41.99);
+  --chart-2: oklch(0.92 0.07 74.37);
+  --chart-3: oklch(0.93 0 0);
+  --chart-4: oklch(0.94 0.05 75.50);
+  --chart-5: oklch(0.43 0.04 41.67);
+  --sidebar: oklch(0.99 0 0);
+  --sidebar-foreground: oklch(0.26 0 0);
+  --sidebar-primary: oklch(0.33 0 0);
+  --sidebar-primary-foreground: oklch(0.99 0 0);
+  --sidebar-accent: oklch(0.98 0 0);
+  --sidebar-accent-foreground: oklch(0.33 0 0);
+  --sidebar-border: oklch(0.94 0 0);
+  --sidebar-ring: oklch(0.77 0 0);
   --destructive-foreground: oklch(1.00 0 0);
-  --font-sans: Courier New, monospace;
-  --font-serif: Courier New, monospace;
-  --font-mono: Courier New, monospace;
-  --shadow-color: hsl(185 70% 30% / 0.15);
-  --shadow-opacity: 0.15;
-  --shadow-blur: 2px;
+  --font-sans: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+  --font-serif: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
+  --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+  --shadow-color: hsl(0 0% 0%);
+  --shadow-opacity: 0.1;
+  --shadow-blur: 3px;
   --shadow-spread: 0px;
-  --shadow-offset-x: 1px;
+  --shadow-offset-x: 0;
   --shadow-offset-y: 1px;
   --letter-spacing: 0em;
   --spacing: 0.25rem;
-  --shadow-2xs: 1px 1px 2px 0px hsl(185 70% 30% / 0.07);
-  --shadow-xs: 1px 1px 2px 0px hsl(185 70% 30% / 0.07);
-  --shadow-sm: 1px 1px 2px 0px hsl(185 70% 30% / 0.15), 1px 1px 2px -1px hsl(185 70% 30% / 0.15);
-  --shadow: 1px 1px 2px 0px hsl(185 70% 30% / 0.15), 1px 1px 2px -1px hsl(185 70% 30% / 0.15);
-  --shadow-md: 1px 1px 2px 0px hsl(185 70% 30% / 0.15), 1px 2px 4px -1px hsl(185 70% 30% / 0.15);
-  --shadow-lg: 1px 1px 2px 0px hsl(185 70% 30% / 0.15), 1px 4px 6px -1px hsl(185 70% 30% / 0.15);
-  --shadow-xl: 1px 1px 2px 0px hsl(185 70% 30% / 0.15), 1px 8px 10px -1px hsl(185 70% 30% / 0.15);
-  --shadow-2xl: 1px 1px 2px 0px hsl(185 70% 30% / 0.38);
+  --shadow-2xs: 0 1px 3px 0px hsl(0 0% 0% / 0.05);
+  --shadow-xs: 0 1px 3px 0px hsl(0 0% 0% / 0.05);
+  --shadow-sm: 0 1px 3px 0px hsl(0 0% 0% / 0.10), 0 1px 2px -1px hsl(0 0% 0% / 0.10);
+  --shadow: 0 1px 3px 0px hsl(0 0% 0% / 0.10), 0 1px 2px -1px hsl(0 0% 0% / 0.10);
+  --shadow-md: 0 1px 3px 0px hsl(0 0% 0% / 0.10), 0 2px 4px -1px hsl(0 0% 0% / 0.10);
+  --shadow-lg: 0 1px 3px 0px hsl(0 0% 0% / 0.10), 0 4px 6px -1px hsl(0 0% 0% / 0.10);
+  --shadow-xl: 0 1px 3px 0px hsl(0 0% 0% / 0.10), 0 8px 10px -1px hsl(0 0% 0% / 0.10);
+  --shadow-2xl: 0 1px 3px 0px hsl(0 0% 0% / 0.25);
   --tracking-normal: 0em;
 }
 
 .dark {
-  --background: oklch(0.21 0.02 224.45);
-  --foreground: oklch(0.85 0.13 195.04);
-  --card: oklch(0.23 0.03 216.07);
-  --card-foreground: oklch(0.85 0.13 195.04);
-  --popover: oklch(0.23 0.03 216.07);
-  --popover-foreground: oklch(0.85 0.13 195.04);
-  --primary: oklch(0.85 0.13 195.04);
-  --primary-foreground: oklch(0.21 0.02 224.45);
-  --secondary: oklch(0.38 0.06 216.50);
-  --secondary-foreground: oklch(0.85 0.13 195.04);
-  --muted: oklch(0.29 0.04 218.82);
-  --muted-foreground: oklch(0.66 0.10 195.05);
-  --accent: oklch(0.38 0.06 216.50);
-  --accent-foreground: oklch(0.85 0.13 195.04);
-  --destructive: oklch(0.62 0.21 25.81);
-  --border: oklch(0.38 0.06 216.50);
-  --input: oklch(0.38 0.06 216.50);
-  --ring: oklch(0.85 0.13 195.04);
-  --chart-1: oklch(0.85 0.13 195.04);
-  --chart-2: oklch(0.66 0.10 195.05);
-  --chart-3: oklch(0.58 0.08 195.07);
-  --chart-4: oklch(0.43 0.06 202.62);
-  --chart-5: oklch(0.31 0.05 204.16);
-  --sidebar: oklch(0.21 0.02 224.45);
-  --sidebar-foreground: oklch(0.85 0.13 195.04);
-  --sidebar-primary: oklch(0.85 0.13 195.04);
-  --sidebar-primary-foreground: oklch(0.21 0.02 224.45);
-  --sidebar-accent: oklch(0.38 0.06 216.50);
-  --sidebar-accent-foreground: oklch(0.85 0.13 195.04);
-  --sidebar-border: oklch(0.38 0.06 216.50);
-  --sidebar-ring: oklch(0.85 0.13 195.04);
-  --destructive-foreground: oklch(0.96 0 0);
-  --radius: 0.125rem;
-  --shadow-color: hsl(180 70% 60% / 0.2);
+  --background: oklch(0.18 0 0);
+  --foreground: oklch(0.95 0 0);
+  --card: oklch(0.21 0 0);
+  --card-foreground: oklch(0.95 0 0);
+  --popover: oklch(0.21 0 0);
+  --popover-foreground: oklch(0.95 0 0);
+  --primary: oklch(0.92 0.05 66.17);
+  --primary-foreground: oklch(0.20 0.02 200.20);
+  --secondary: oklch(0.32 0.02 63.70);
+  --secondary-foreground: oklch(0.92 0.05 66.17);
+  --muted: oklch(0.25 0 0);
+  --muted-foreground: oklch(0.77 0 0);
+  --accent: oklch(0.29 0 0);
+  --accent-foreground: oklch(0.95 0 0);
+  --destructive: oklch(0.63 0.19 33.34);
+  --border: oklch(0.24 0.01 91.75);
+  --input: oklch(0.40 0 0);
+  --ring: oklch(0.92 0.05 66.17);
+  --chart-1: oklch(0.92 0.05 66.17);
+  --chart-2: oklch(0.32 0.02 63.70);
+  --chart-3: oklch(0.29 0 0);
+  --chart-4: oklch(0.35 0.02 67.00);
+  --chart-5: oklch(0.92 0.05 67.09);
+  --sidebar: oklch(0.21 0.01 285.89);
+  --sidebar-foreground: oklch(0.97 0.00 286.38);
+  --sidebar-primary: oklch(0.49 0.22 264.38);
+  --sidebar-primary-foreground: oklch(1.00 0 0);
+  --sidebar-accent: oklch(0.27 0.01 286.03);
+  --sidebar-accent-foreground: oklch(0.97 0.00 286.38);
+  --sidebar-border: oklch(0.27 0.01 286.03);
+  --sidebar-ring: oklch(0.87 0.01 286.29);
+  --destructive-foreground: oklch(1.00 0 0);
+  --radius: 0.5rem;
+  --shadow-color: hsl(0 0% 0%);
   --letter-spacing: 0em;
   --spacing: 0.25rem;
-  --font-sans: Source Code Pro, monospace;
-  --font-serif: Source Code Pro, monospace;
-  --font-mono: Source Code Pro, monospace;
-  --shadow-opacity: 0.2;
-  --shadow-blur: 2px;
+  --font-sans: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+  --font-serif: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
+  --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+  --shadow-opacity: 0.1;
+  --shadow-blur: 3px;
   --shadow-spread: 0px;
-  --shadow-offset-x: 1px;
+  --shadow-offset-x: 0;
   --shadow-offset-y: 1px;
-  --shadow-2xs: 1px 1px 2px 0px hsl(180 70% 60% / 0.10);
-  --shadow-xs: 1px 1px 2px 0px hsl(180 70% 60% / 0.10);
-  --shadow-sm: 1px 1px 2px 0px hsl(180 70% 60% / 0.20), 1px 1px 2px -1px hsl(180 70% 60% / 0.20);
-  --shadow: 1px 1px 2px 0px hsl(180 70% 60% / 0.20), 1px 1px 2px -1px hsl(180 70% 60% / 0.20);
-  --shadow-md: 1px 1px 2px 0px hsl(180 70% 60% / 0.20), 1px 2px 4px -1px hsl(180 70% 60% / 0.20);
-  --shadow-lg: 1px 1px 2px 0px hsl(180 70% 60% / 0.20), 1px 4px 6px -1px hsl(180 70% 60% / 0.20);
-  --shadow-xl: 1px 1px 2px 0px hsl(180 70% 60% / 0.20), 1px 8px 10px -1px hsl(180 70% 60% / 0.20);
-  --shadow-2xl: 1px 1px 2px 0px hsl(180 70% 60% / 0.50);
+  --shadow-2xs: 0 1px 3px 0px hsl(0 0% 0% / 0.05);
+  --shadow-xs: 0 1px 3px 0px hsl(0 0% 0% / 0.05);
+  --shadow-sm: 0 1px 3px 0px hsl(0 0% 0% / 0.10), 0 1px 2px -1px hsl(0 0% 0% / 0.10);
+  --shadow: 0 1px 3px 0px hsl(0 0% 0% / 0.10), 0 1px 2px -1px hsl(0 0% 0% / 0.10);
+  --shadow-md: 0 1px 3px 0px hsl(0 0% 0% / 0.10), 0 2px 4px -1px hsl(0 0% 0% / 0.10);
+  --shadow-lg: 0 1px 3px 0px hsl(0 0% 0% / 0.10), 0 4px 6px -1px hsl(0 0% 0% / 0.10);
+  --shadow-xl: 0 1px 3px 0px hsl(0 0% 0% / 0.10), 0 8px 10px -1px hsl(0 0% 0% / 0.10);
+  --shadow-2xl: 0 1px 3px 0px hsl(0 0% 0% / 0.25);
 }
 
 @layer base {
